--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
   "license": "UNLICENSED",
   "dependencies": {
     "@lerna/collect-packages": "^3.0.0-beta.17"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/RpprRoger/report-lerna"
   }
 }
